# vm

./: .gitignore  CMakeLists.txt  README.md  psi_vm.natvis  psi_vm_gdb.py  psi_vm_lldb.py  vm.cmake
.github/workflows/: gh-actions.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vm_unit_tests[1]_include.cmake
boost/mmap/: amalgamated_lib.cpp  implementations.hpp  mapped_view.hpp  mapped_view.inl  memory_mapping.cpp  memory_mapping.hpp  memory_mapping.inl
boost/mmap/detail/: impl_inline.hpp  impl_selection.hpp  include_impl_file.hpp  posix.hpp  windows.hpp
boost/mmap/handles/: handle.hpp  handle.inl  handle_ref.hpp  mapping_handle.hpp
boost/mmap/handles/posix/: handle.hpp  handle.inl
boost/mmap/handles/win32/: handle.hpp  handle.inl
boost/mmap/mappble_objects/file/: file.hpp  file.inl  flags.hpp  flags.inl  handle.hpp  utility.hpp  utility.inl
boost/mmap/mappble_objects/file/posix/: file.hpp  file.inl  flags.hpp  flags.inl  mapping_flags.hpp  mapping_flags.inl  open_flags.hpp  open_flags.inl
boost/mmap/mappble_objects/file/win32/: file.hpp  file.inl  flags.hpp  flags.inl  mapping_flags.hpp  mapping_flags.inl  open_flags.hpp  open_flags.inl
boost/mmap/mappble_objects/posix_file/: flags.hpp  flags.inl  handle.hpp  handle.inl
boost/mmap/mappble_objects/shared_memory/posix/: flags.hpp  flags.inl
boost/mmap/mappble_objects/shared_memory/win32/: flags.hpp  flags.inl
boost/mmap/mappble_objects/win32_file/: flags.hpp  flags.inl  handle.hpp  handle.inl
boost/mmap/mapped_view/: mapped_view.hpp  mapped_view.inl
boost/mmap/mapped_view/posix/: mapped_view.inl
boost/mmap/mapped_view/win32/: mapped_view.inl
boost/mmap/mapping/: mapping.hpp  mapping.inl
boost/mmap/mapping/posix/: mapping.hpp  mapping.inl
boost/mmap/mapping/win32/: mapping.hpp  mapping.inl
build_clang/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_clang/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: flat_container_comparison.md
include/boost/mmap/: amalgamated_lib.cpp  implementations.hpp
include/boost/mmap/detail/: impl_selection.hpp  nt.hpp  posix.hpp  win32.hpp
include/boost/mmap/error/: error.hpp
include/boost/mmap/error/posix/: error.hpp
include/boost/mmap/error/win32/: error.hpp
include/boost/mmap/flags/: flags.hpp  flags.inl  mapping.hpp  opening.hpp
include/boost/mmap/flags/posix/: flags.hpp  flags.inl  mapping.hpp  mapping.inl  opening.hpp  opening.inl
include/boost/mmap/flags/win32/: flags.hpp  flags.inl  mapping.hpp  mapping.inl  opening.hpp  opening.inl
include/boost/mmap/handles/: handle.hpp  handle_ref.hpp
include/boost/mmap/handles/posix/: handle.hpp
include/boost/mmap/handles/win32/: handle.hpp  handle.inl
include/boost/mmap/mappable_objects/file/: file.hpp  file.inl  handle.hpp  utility.hpp  utility.inl
include/boost/mmap/mappable_objects/shared_memory/: flags.hpp  mem.hpp  policies.hpp
include/boost/mmap/mappble_objects/file/: file.hpp  flags.hpp  flags.inl  (+3 more)
include/boost/mmap/mapped_view/: guarded_operation.hpp  mapped_view.hpp  mapped_view.inl
include/boost/mmap/mapping/: mapping.hpp
include/psi/vm/: align.hpp  allocation.hpp  allocator.hpp  amalgamated_lib.cpp  erased_ref_predicate.hpp  implementations.hpp  inplace_merge.hpp  protection.cpp  protection.hpp  sort.hpp  span.hpp  vector.hpp
include/psi/vm/allocation/: allocation.hpp
include/psi/vm/allocators/: allocator_base.hpp  crt.hpp  dlmalloc.hpp  jemalloc.hpp  mi_heap.hpp  mi_scoped_heap.hpp  mimalloc.hpp  tcmalloc.hpp
include/psi/vm/containers/: FLAT_CONTAINER_COMPARISON.md  abi.hpp  allocator.hpp  b+tree.hpp  b+tree_print.hpp  complete.hpp  crt_vector.hpp  fc_vector.hpp  flat_common.hpp  flat_map.hpp  flat_set.hpp  growth_policy.hpp  heap_vector.hpp  is_trivially_moveable.hpp  komparator.hpp  lookup.hpp  noninitialized_array.hpp  relvector.hpp  small_vector.hpp  static_vector.hpp  strided_vector.hpp  tr_vector.hpp  trivially_destructible_after_move.hpp  vector.hpp  vector_impl.hpp  vm_vector.hpp
include/psi/vm/detail/: impl_inline.hpp  impl_selection.hpp  nt.hpp  posix.hpp  win32.hpp
include/psi/vm/error/: error.hpp  error.nt.hpp  error.posix.hpp  error.win32.hpp
include/psi/vm/flags/: flags.hpp  flags.posix.hpp  flags.win32.hpp  mapping.hpp  mapping.posix.hpp  mapping.win32.hpp  opening.hpp  opening.posix.hpp  opening.win32.hpp
include/psi/vm/handles/: handle.hpp  handle.posix.hpp  handle.win32.hpp  handle_ref.hpp
include/psi/vm/mapped_view/: flush_manifest.hpp  guarded_operation.hpp  mapped_view.hpp  mapped_view.inl  ops.hpp
include/psi/vm/mapping/: mapping.hpp  mapping.posix.hpp  mapping.win32.hpp
libs/mmap/doc/: readme.txt
src/: pch.hpp  protection.cpp
src/allocation/: allocation.impl.hpp  allocation.posix.cpp  allocation.win32.cpp  expand_darwin.hpp  expand_linux.hpp  expand_win32.hpp  remap.cpp
src/containers/: b+tree.cpp  cow_clone.posix.cpp  cow_clone.win32.cpp  cow_clone_impl.hpp  dirty_tracker.darwin.cpp  dirty_tracker.hpp  dirty_tracker.posix.cpp  dirty_tracker.win32.cpp  vector.cpp  vm_vector.cpp
src/containers/storage/: cow_clone.posix.cpp  cow_clone.win32.cpp  dirty_tracker.darwin.cpp  dirty_tracker.hpp  dirty_tracker.posix.cpp  dirty_tracker.win32.cpp
src/detail/: mach.hpp  nt.cpp
src/flags/: flags.posix.cpp  flags.win32.cpp  mapping.posix.cpp  mapping.win32.cpp  opening.posix.cpp  opening.win32.cpp
src/mappable_objects/file/: file.posix.cpp  file.win32.cpp  utility.cpp
src/mappable_objects/shared_memory/: flags.posix.cpp  flags.win32.cpp  mem.posix.cpp
src/mapped_view/: flush_manifest.cpp  mapped_view.cpp  mapped_view.posix.cpp  mapped_view.win32.cpp  mapped_view.win32.hpp  mapper.hpp
src/mapping/: mapping.win32.cpp
test/: CMakeLists.txt  b+tree.cpp  codegen_compare.cpp  cow.cpp  flat_map.cpp  flat_set.cpp  handle_release.cpp  reserving_mapped_view.cpp  small_vector.cpp  small_vector_codegen.cpp  strided_vector.cpp  vector.cpp  vector_storage.cpp  vm_vector.cpp
(+91 files in other folders)
